Adopt virtual threads for task execution and background processing.